# scholaraio

./: AGENTS.md  AGENTS_CN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  README_CN.md  config.yaml  mkdocs.yml  pyproject.toml
.claude/skills/draw/: SKILL.md
.claude/skills/setup/: SKILL.md
docs/: DESIGN.md  PLANS.md  QUALITY_SCORE.md  index.md
docs/design-docs/: directory-migration-sequence.md  directory-structure-spec.md  index.md  migration-mechanism-spec.md  user-data-migration-strategy.md
docs/development/: third-party-integration-audit.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/exec-plans/active/: 2026-06-05-001-feat-agent-setup-automation-plan.md
docs/exec-plans/completed/: breaking-compat-cleanup-plan.md  scholaraio-upgrade-plan.md
docs/getting-started/: agent-setup.md  installation.md
docs/guide/: agent-reference.md  cli-reference.md  writing.md
docs/product-specs/: index.md
docs/references/: config-surface-audit.md  index.md  third-party-integration-audit.md
docs/validation/: index.md  upgrade-validation-matrix.md
docs/validation/reports/: release-1.4.0-self-check-report-20260425.md  upgrade-validation-report-20260423.md  upgrade-validation-report-20260424.md  upgrade-validation-report-20260425-main-v1.3.1.md
docs/writing-guide/: academic-beamer-guide.md  graphviz-guide.md
explicit-skills/: README.md
explicit-skills/scholaraio-explore/: SKILL.md
explicit-skills/scholaraio-ingest/: SKILL.md
explicit-skills/scholaraio-paper-guided-reading/: SKILL.md
explicit-skills/scholaraio-pdf/: SKILL.md
explicit-skills/scholaraio-search/: SKILL.md
explicit-skills/scholaraio-show/: SKILL.md
scholaraio/: __init__.py
scholaraio/interfaces/cli/: gui.py  parser.py  setup.py
scholaraio/interfaces/cli/library-view/: app.js  index.html  styles.css
scholaraio/providers/: mineru.py  webtools.py
scholaraio/services/: agent_setup.py  diagram.py  library_view.py  setup.py
scholaraio/services/ingest/: inbox_steps.py
tests/: test_agent_entry_docs.py  test_agent_setup.py  test_diagram.py  test_explicit_skills.py  test_gui_server.py  test_library_view.py  test_mineru.py  test_pipeline_resilience.py  test_release_metadata.py  test_repository_layout.py  test_setup.py  test_version.py  test_webtools_source.py
